# Gendiff-Project

./: .coverage  .gitignore  Makefile  README.md  coverage.json  coverage.lcov  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: test-check.yml
gendiff/: __init__.py  cli.py  diffmaker.py  gendiff.py  gendiff_module.py  parser.py
gendiff/formatters/: formatter.py  plain.py  stylish.py
gendiff/scripts/: gendiff_entry.py
tests/: test_gendiff.py
tests/fixtures/: RIGHT_JSON.json  answer_simple_json  file4.json  nested1.yaml  nested2.yaml  right.py
